Se anade estilos a los items del menu

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,3 +10,12 @@ h3 {
 li {
   color: darkred;
 }
+
+h5 {
+  color:blueviolet
+}
+
+.menu-item {
+  text-align: center;
+  text-decoration: line-through;
+}
